--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.inputsystem": "1.0.0-preview.4",
     "com.unity.probuilder": "4.2.3",
     "com.unity.render-pipelines.universal": "7.1.8",
+    "com.unity.terrain-tools": "3.0.1-preview",
     "com.unity.test-framework": "1.1.9",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.10",
