--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,7 +8,7 @@
     "com.unity.render-pipelines.universal": "7.1.8",
     "com.unity.terrain-tools": "3.0.1-preview",
     "com.unity.test-framework": "1.1.9",
-    "com.unity.textmeshpro": "2.0.1",
+    "com.unity.textmeshpro": "2.1.0-preview.12",
     "com.unity.timeline": "1.2.10",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualeffectgraph": "7.1.8",
